# paperloom

./: .dockerignore  .gitignore  LICENSE  PRODUCT.md  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: paperloom-anonymize.md  paperloom-doctor.md  paperloom-ocr.md
.claude-plugin/skills/: paperloom-anonymize.md  paperloom-chain.md  paperloom-ocr.md
.github/workflows/: deploy-landing.yml
backend/: README.md  pyproject.toml
backend/paperloom/: __init__.py  _api.py  chain.py  cli.py  config.py  jobs.py  main.py  mcp_server.py  privacy.py  sse.py
backend/paperloom/anonymizer/: __init__.py  _lazy_install.py  detect.py  redact.py  report.py
backend/paperloom/ocr/: figures.py  images.py  ollama.py  pipeline.py  prompts.py  render.py  stub.py
backend/paperloom/ocr/backends/: __init__.py  base.py  mistral.py  ollama.py  stub.py
backend/paperloom/routers/: files.py  health.py  jobs.py
backend/paperloom/tools/: __init__.py  _overlay.py  _pageutils.py  _weasyprint.py  add_page_numbers.py  add_watermark.py  anonymize.py  compress_pdf.py  delete_pages.py  extract_pages.py  html_to_pdf.py  images_to_pdf.py  markdown_to_html.py  markdown_to_pdf.py  merge_pdfs.py  ocr_to_markdown.py  pdf_to_html.py  pdf_to_images.py  pdf_to_text.py  reorder_pages.py  rotate_pages.py  split_pdf.py  strip_metadata.py
backend/src/: chain.py  config.py  jobs.py  main.py  mcp_server.py  zip.py
backend/src/anonymizer/: __init__.py  detect.py  redact.py  report.py
backend/src/ocr/: ollama.py  pipeline.py  prompts.py
backend/src/routers/: files.py  health.py  jobs.py
backend/src/tools/: __init__.py  add_page_numbers.py  add_watermark.py  anonymize.py  compress_pdf.py  delete_pages.py  extract_pages.py  html_to_pdf.py  images_to_pdf.py  markdown_to_html.py  markdown_to_pdf.py  merge_pdfs.py  ocr_to_markdown.py  pdf_to_html.py  pdf_to_images.py  pdf_to_text.py  reorder_pages.py  rotate_pages.py  split_pdf.py  strip_metadata.py
backend/tests/: test_anonymizer.py  test_files.py  test_health.py  test_mcp_server.py  test_no_egress.py  test_ocr_figures.py  test_ocr_stub.py  test_phase3c_tools.py  test_phase3d_converters.py  test_security.py  test_tools.py
backend/tests/bench/: README.md  run.py  score.py
backend/tests/bench/fixtures/: README.md
doc/: architecture.md  benchmarks.md  distribution.md  handoff-tier2.md  phase-0.md  privacy.md  release-checklist.md  roadmap.md
doc/archive/: PROMPT.md  README.md
doc/cookbook/: 01-llm-wiki-ingest.md  02-rag-ingest.md  02-redact-medical.md  03-agno-agent.md  04-claude-desktop.md  05-claude-desktop.md  05-scan-clean-pdf.md  06-agno-agent.md  06-batch-merge-invoices.md  07-langchain-tool.md  07-redact-medical.md  09-remote-agno-cloud-ocr.md  10-photo-batch-to-wiki.md  README.md
doc/prompt/: PROMPT.md  anonymizer-rules.md  architecture.md  i18n-rules.md
doc/rules/: a11y.md  shadcn.md
docker/: backend.Dockerfile  web.Dockerfile
video-promo/: README.md  package-lock.json  package.json  tsconfig.json
video-promo/src/: Demo.tsx  Root.tsx  theme.ts
video-promo/src/scenes/: Anonymize.tsx  Drop.tsx  OcrStream.tsx  Outro.tsx  Title.tsx
web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json
web/app/: globals.css
web/app/[locale]/: layout.tsx  page.tsx
web/app/[locale]/tools/: layout.tsx  page.tsx
web/app/[locale]/tools/anonymize/: page.tsx
web/app/[locale]/tools/chain/: page.tsx
web/app/[locale]/tools/ocr-to-markdown/: page.tsx
web/components/anonymize/: anonymize-tool.tsx  install-banner.tsx
web/components/catalogue/: catalogue-grid.tsx  tile.tsx
web/components/chain/: builder.tsx  event-timeline.tsx
web/components/home/: health-pill.tsx  install-snippet.tsx  woven-mark.tsx
web/components/i18n/: locale-switch.tsx
web/components/ocr/: ocr-tool.tsx
web/components/shell/: app-header.tsx  breadcrumbs.tsx  privacy-badge.tsx  skip-link.tsx
web/components/theme/: theme-provider.tsx  theme-toggle.tsx
web/components/ui/: ai-badge.tsx  button.tsx  card.tsx
web/i18n/: routing.ts
web/lib/: api.ts  landing.ts  page-range.ts
web/messages/: en.json  it.json
web/scripts/: landing-redirect.mjs
