[project]
name = "pdf-ocr-backend"
version = "0.1.0"
description = "FastAPI backend for pdf-ocr (OCR adapter, PDF tools, OPF anonymizer)."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "pypdfium2>=4.30.0",
    "pypdf>=5.1.0",
    "Pillow>=11.0.0",
    "markdown-it-py>=3.0.0",
    "reportlab>=4.2.0",
    "weasyprint>=68.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
